Time: 2 ms (83.66%), Space: 44.6 MB (41.94%) - LeetHub